<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="open_database_title">Open Database</string>
    <string name="open_database_import_title">Open Local DB</string>
    <string name="open_database_import_description">Select a DB file to open.</string>
    <string name="open_database_browse_files">Browse Files</string>
    <string name="open_database_section_local_databases">HISTORY</string>
    <string name="open_database_retry">Retry</string>
    <string name="error_vault_already_exists">A vault already exists in the selected directory</string>
    <string name="error_vault_not_readable">Cannot open the file</string>
    <string name="error_vault_not_sqlite">Not a SQLite database file</string>
    <string name="error_unsupported_file_type">Some files were not added due to unsupported file type</string>
    <string name="error_tag_already_exists">Tag already exists</string>
    <string name="error_author_already_exists">Author already exists</string>
    <string name="error_unexpected">An unexpected error occurred</string>
    <string name="collection_list_title" translatable="false">Collection View</string>
    <string name="collection_list_filter">Filter</string>
    <string name="category_illustration" translatable="false">ILLUSTRATION</string>
    <string name="category_photo" translatable="false">PHOTO</string>
    <string name="category_fanzine" translatable="false">FANZINE</string>
    <string name="category_movie" translatable="false">MOVIE</string>
    <string name="add_collection_title" translatable="false">Add Collection</string>
    <string name="add_collection_section_category">SELECT CATEGORY</string>
    <string name="add_collection_section_upload">ADD FILES</string>
    <string name="add_collection_upload_title">Add Files</string>
    <string name="add_collection_browse_files">Browse Files</string>
    <string name="add_collection_section_details">COLLECTION DETAILS</string>
    <string name="add_collection_field_title">COLLECTION TITLE</string>
    <string name="add_collection_field_category">Category</string>
    <string name="add_collection_authors">Authors</string>
    <string name="add_collection_tags">Tags</string>
    <string name="add_collection_edit_order">Edit Order / Manage (%1$d items)</string>
    <string name="add_collection_submit">CREATE COLLECTION</string>
    <string name="select_tags_title">Select Tags</string>
    <string name="select_tags_done">Done</string>
    <string name="select_tags_search_placeholder">Tag to add</string>
    <string name="select_tags_selected">SELECTED TAGS</string>
    <string name="select_tags_recommended">RECENTLY ADDED</string>
    <string name="select_tags_manage">Manage Tags</string>
    <string name="select_tags_create">Create tag %1$s</string>
    <string name="select_tags_search_results">SEARCH RESULTS</string>
    <string name="select_tags_update">UPDATE SELECTION</string>
    <string name="manage_tags_title">Manage Tags</string>
    <string name="manage_tags_search_placeholder">Search tags</string>
    <string name="manage_tags_section_all">ALL TAGS</string>
    <string name="manage_tags_total">%1$d TOTAL</string>
    <string name="manage_tags_create">Create tag %1$s</string>
    <string name="edit_tag_title">Edit Tag</string>
    <string name="edit_tag_primary_name">PRIMARY NAME</string>
    <string name="edit_tag_aliases">ALIASES</string>
    <string name="edit_tag_new_alias_placeholder">New alias</string>
    <string name="edit_tag_add_alias">Add alias</string>
    <string name="edit_tag_done">DONE</string>
    <string name="select_authors_title">Select Authors</string>
    <string name="select_authors_search_placeholder">Author to add</string>
    <string name="select_authors_recommended">RECENTLY ADDED</string>
    <string name="select_authors_manage">Manage Authors</string>
    <string name="select_authors_create">Create author %1$s</string>
    <string name="select_authors_update">UPDATE SELECTION</string>
    <string name="manage_authors_title">Manage Authors</string>
    <string name="manage_authors_search_placeholder">Search authors</string>
    <string name="manage_authors_section_all">ALL AUTHORS</string>
    <string name="manage_authors_total">%1$d TOTAL</string>
    <string name="manage_authors_create">Create author %1$s</string>
    <string name="edit_author_title">Edit Author</string>
    <string name="edit_author_primary_name">PRIMARY NAME</string>
    <string name="edit_author_aliases">ALIASES</string>
    <string name="edit_author_new_alias_placeholder">New alias</string>
    <string name="edit_author_add_alias">Add alias</string>
    <string name="edit_author_done">DONE</string>
    <string name="collection_viewer_file_count">%1$d files</string>
    <string name="collection_viewer_tags">Tags</string>
</resources>
